@@ -62,6 +62,7 @@ Peter Astrand <altic@lysator.liu.se>
 Ralf Medow <ralf.medow@t-online.de>
 Ramon van Handel <vhandel@chem.vu.nl>
 Roderich Schupp <rsch@ExperTeam.de>
+Rogelio M. Serrano Jr. <rogelio@victorio.com>
 Stefan Ondrejicka <ondrej@idata.sk>
 Stephen Early <steve@greenend.org.uk>
 Takehiro Suzuki <takehiro@coral.ocn.ne.jp>
