@@ -29,6 +29,9 @@ New in 1.0 - XXXX-XX-XX:
 * The configure script now accepts `--disable-auto-linux-mem-opt', which
   has the same meaning as you specify the option `--no-mem-option' to the
   command "kernel".
+* Jump to the physical entry address of a Multiboot kernel when booting
+  it up. The old behavior was to use the virtual one, regardless of the
+  setting of the physical address.
 
 New in 0.5.96 - 2000-10-04:
 * New commands, "reboot" and "halt".
